# confcheck

./: .gitignore  .travis.yml  README.md  confcheck.cabal  stack.yaml  stack.yaml.sample
app/: Main.hs  Patches.hs  ViewOval.hs  serializer.hs
debian/: .gitignore  changelog  control  rules
scripts/: .gitignore  linux.sh  solaris.sh  updates.vbs
sources/: .gitignore  BulletinSearch2001-2008.csv
src/: Analysis.hs  Analyzis.hs  Reports.hs
src/Analysis/: ConnectToApp.hs  Cron.hs  Debian.hs  DebianJson.hs  Files.hs  Ifconfig.hs  Ipaddr.hs  LinuxKern.hs  Netstat.hs  Oval.hs  Parsers.hs  Passwd.hs  RPM.hs  Rhosts.hs  Shell.hs  Solaris.hs  Sssd.hs  Sudoers.hs  Sysctl.hs  TarStream.hs  WindowsAudit.hs
src/Analysis/Files/: Conditions.hs  Conditions2.hs
src/Analysis/Parsers/: Megaparsec.hs
src/Analyzis/: ConnectToApp.hs  Cron.hs  Debian.hs  DebianJson.hs  Files.hs  Ifconfig.hs  LinuxKern.hs  Netstat.hs  Oval.hs  Parsers.hs  Passwd.hs  RPM.hs  Rhosts.hs  Shell.hs  Solaris.hs  Sssd.hs  Sudoers.hs  Sysctl.hs  TarStream.hs  WindowsAudit.hs
src/Analyzis/Files/: Conditions.hs  Conditions2.hs
src/Data/: Common.hs  DebianVersion.hs  Microsoft.hs  Oval.hs  PrismFilter.hs
src/Data/Serialize/: Tdb.hs
test/: Spec.hs
